Fixed overlap navbar

--- a/header.css
+++ b/header.css
@@ -150,7 +150,7 @@ nav {
     width: 100%;
     background-color: var(--soft-pink);
     position: absolute;
-    top: 60px;
+    top: 100px; /* Adjusted to accommodate top-bar */
     left: 0;
     padding: var(--space-sm) 0;
     transition: max-height 0.3s ease-in-out;
